--- a/bio/test-all/dbmodel/build.xml
+++ b/bio/test-all/dbmodel/build.xml
@@ -38,6 +38,7 @@
     <merge-additions file="bio/sources/fly-fish/fly-fish_additions.xml"/>
     <merge-additions file="bio/sources/anoph-expr/anoph-expr_additions.xml"/>
     <merge-additions file="bio/sources/bdgp-insitu/bdgp-insitu_additions.xml"/>
+    <merge-additions file="bio/sources/biogrid/biogrid_additions.xml"/>
     <merge-additions file="bio/core/shortcuts.xml"/>
   </target>
 
