--- a/bio/tutorial/malariamine/dbmodel/project.properties
+++ b/bio/tutorial/malariamine/dbmodel/project.properties
@@ -5,6 +5,9 @@ model.name = genomic
 
 core.model.path = bio/core
 
+extra.model.paths.start = bio/core/genomic_additions.xml bio/sources/so/so_additions.xml
+extra.model.paths.end = bio/core/shortcuts.xml
+
 # choose the intermine.properties file from $HOME:
 intermine.properties.file = malariamine.properties
 default.intermine.properties.file = ../default.intermine.integrate.properties
