--- a/bio/tutorial/malariamine/webapp/resources/webapp/WEB-INF/class_keys.properties
+++ b/bio/tutorial/malariamine/webapp/resources/webapp/WEB-INF/class_keys.properties
@@ -1,7 +1,7 @@
 # Specify keys for classes in the data model.  These define which types can be
 # stored in 'object' bags and are used for porting those bags to new releases.
 
-BioEntity = identifier
+BioEntity = primaryIdentifier
 Gene = primaryIdentifier, symbol
 Protein = primaryAccession
 OntologyTerm = identifier, name
