--- a/bio/core/main/.classpath
+++ b/bio/core/main/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/intermine-objectstore-main"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/bio-testall-dbmodel"/>
 	<classpathentry exported="true" kind="lib" path="lib/biojava-1.4cvs.jar"/>
+	<classpathentry exported="true" kind="lib" path="resources"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
