removed obsolete field, updated to gene.primaryIdentifier
Former-commit-id: 4fbcf6d495cd96f88e6ff3b94390e5d3daf7f155

--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -277,7 +277,6 @@ SimpleRelation=A simple relationship between two BioEntities.
 SymmetricalRelation=A relationship between two BioEntities that doesn't have direction - all objects are related to each other in the same way.
 Synonym=Another name by which a BioEntity is known.
 TilingPathSpan=A tiling path is a set of regions which overlap with minimal polymorphism to form a linear sequence. A TilingPathSpan starts at the initiation codon of one gene and ends at the initiation codon of a neighbouring gene or at a transposable element.
-TiffinExpressionTerm=Expression term to which a Tiffin motif is associated. Motifs were assigned an expression term from the <a href="http://www.fruitfly.org/cgi-bin/ex/go.cgi">ImaGO controlled vocabulary</a> according to the <a href="http://www.fruitfly.org/cgi-bin/ex/insitu.pl">in-situ expression pattern</a> of nearby genes.
 Translation=A possible translation of (part of) a gene that differs from the amino acid sequence found in the corresponding wild-type protein.
 Treatment=A treatment is the process or action applied to a particular sample.
 TreatmentParameter=A variable within the treatment.
@@ -291,7 +290,7 @@ Vector=A DNA molecule that can be used to transfer DNA molecules between organis
 
 # Class field descriptions
 
-Gene.identifier=Any identifier, other than the main organism genome database identifier, which \
+Gene.secondaryIdentifier=Any identifier, other than the main organism genome database identifier, which \
 is commonly used to identify a gene (for example, the Drosophila CG identifier). See 'Synonyms' \
 for other gene names and identifiers for this gene.<p>\
 
