--- a/bio/core/props/resources/class_keys.properties
+++ b/bio/core/props/resources/class_keys.properties
@@ -23,3 +23,4 @@ InfoSource = title
 InsertionSite = primaryIdentifier, symbol
 TiffinExpressionTerm = name
 DataSet = title
+Deletion = primaryIdentifier, secondaryIdentifier
