--- a/bio/core/props/resources/genomic_keyDefs.properties
+++ b/bio/core/props/resources/genomic_keyDefs.properties
@@ -106,7 +106,7 @@ PCRProduct.key_primaryidentifier = primaryIdentifier
 Primer.key_primaryidentifier = primaryIdentifier
 TransposableElementInsertionSite.key_primaryidentifier = primaryIdentifier
 Deletion.key_primaryidentifier = primaryIdentifier
-ArtificialDeletion.key_primaryidentifier = primaryIdentifier
+ArtificialDeletion.key_secondaryidentifier = secondaryIdentifier
 SyntenicRegion.key_primaryidentifier = primaryIdentifier
 
 # AnoEST keys
