--- a/modmine/dbmodel/resources/genomic_keyDefs.properties
+++ b/modmine/dbmodel/resources/genomic_keyDefs.properties
@@ -4,11 +4,12 @@ Gene.key_primaryidentifier=primaryIdentifier
 Gene.key_secondaryidentifier=secondaryIdentifier, organism
 Gene.key_symbol_org=symbol, organism
 Gene.key_ncbiGeneNumber=ncbiGeneNumber
+Gene.key_gleanrsymbol=GLEANRsymbol
 Protein.key_primaryidentifier=primaryIdentifier
 Protein.key_primaryacc=primaryAccession
 Translation.key_primaryidentifier=primaryIdentifier
 Translation.key_symbol_org=symbol, organism
-Translation.key_primaryidentifier=primaryIdentifier
+Translation.key_secondaryidentifier=secondaryIdentifier
 CDS.key_primaryidentifier=primaryIdentifier
 Chromosome.key_primaryidentifier = primaryIdentifier, organism
 ChromosomeBand.key_identifier_chromosome_org=primaryIdentifier, chromosome, organism
@@ -16,6 +17,7 @@ Contig.key_primaryidentifier=primaryIdentifier
 SuperContig.key_primaryidentifier=primaryIdentifier
 Clone.key_primaryidentifier=primaryIdentifier
 Transcript.key_primaryidentifier=primaryIdentifier
+Transcript.key_secondaryidentifier=secondaryIdentifier
 UTR.key_primaryidentifier=primaryIdentifier
 Exon.key_primaryidentifier=primaryIdentifier
 Promoter.key_primaryidentifier=primaryIdentifier
@@ -71,7 +73,7 @@ ProteinInteraction.key_interaction = shortName, protein
 #ProteinInteractor.key_rpi=role, protein, interaction
 #ProteinInteractionTerm.key_name=name
 ProteinInteractionExperiment.key_name = name
-ProteinInteractionRegion.key_region = location, interaction, protein
+#ProteinInteractionRegion.key_region = location, interaction, protein
 
 ProteinDomain.key_identifier=primaryIdentifier
 
@@ -105,11 +107,15 @@ TilingPathSpan.key_primaryidentifier = primaryIdentifier
 PCRProduct.key_primaryidentifier = primaryIdentifier
 Primer.key_primaryidentifier = primaryIdentifier
 TransposableElementInsertionSite.key_primaryidentifier = primaryIdentifier
+TransposableElementInsertionSite.key_secondaryidentifier = secondaryIdentifier, organism
 Deletion.key_primaryidentifier = primaryIdentifier
-ArtificialDeletion.key_primaryidentifier = primaryIdentifier
+ArtificialDeletion.key_secondaryidentifier = secondaryIdentifier
 SyntenicRegion.key_primaryidentifier = primaryIdentifier
 
 # AnoEST keys
 EST.key_primaryidentifier = primaryIdentifier
 ESTCluster.key_primaryidentifier = primaryIdentifier
 
+# BDGP in situ
+MRNAExpressionTerm.key_name_type = name, type
+Stage.key_name = name
