Fixed summary properties for the malariamine tutorial.
Former-commit-id: 78c76095419d16611a3319ddb708232228d11f41

--- a/bio/tutorial/malariamine/dbmodel/resources/objectstoresummary.config.properties
+++ b/bio/tutorial/malariamine/dbmodel/resources/objectstoresummary.config.properties
@@ -1,5 +1,5 @@
 max.field.values = 10
-org.flymine.model.genomic.Chromosome.fields = identifier
+org.flymine.model.genomic.Chromosome.fields = primaryIdentifier
 org.flymine.model.genomic.DataSet.fields = title
 org.flymine.model.genomic.DataSource.fields = name
 org.flymine.model.genomic.InfoSource.fields = title
