Added a class key for MicroArrayAssay.
Former-commit-id: 29e4a05cba59798763668a6ef907751620f2353c

--- a/bio/core/props/resources/class_keys.properties
+++ b/bio/core/props/resources/class_keys.properties
@@ -24,3 +24,5 @@ InsertionSite = primaryIdentifier, symbol
 TiffinExpressionTerm = name
 DataSet = title
 Deletion = primaryIdentifier, secondaryIdentifier
+MicroArrayAssay = name
+
