Updated for release 12.0.
Former-commit-id: ad372a8c1475a0c6f987412af7b7b562ce6ef928

--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -210,12 +210,15 @@ Database=An external database.
 DataSet=A set of results or data from a data source.
 DataSource=The origin of imported data.
 Disease=Objects of this class are contain disease descriptions from the <a href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?db=OMIM">OMIM database</a>
+DomainRelationship=Parent/child (family/subfamily) and contains/found-in (domain composition) relationships between protein domains and families (taken from the Interpro database).
 ESTCluster= Set of joined ESTs.
 Evidence=Provides evidence for a Relation, BioEntity or Annotation. The evidence could be a publication, external database or experimental or computational result.
 Experiment=The description of an experimental procedure.
 ExperimentalResult=The result of an experimental procedure.
 FlyAtlasResult=A result from the FlyAtlas microarray project.
 ForwardPrimer=A single stranded oligo used for polymerase chain reaction.
+GeneticInteraction=An interaction that has been characterised between two or more genes (i.e. the effect that mutation of a gene has on the phenotype of another gene).
+GeneticInteractionExperiment=The experiment in which a particular genetic interaction was determined.
 GenomeRegion=Continuous genomic sequence.
 GOAnnotation=Objects of class GOAnnotation hold the Gene Ontology annotation for a gene.
 GOEvidence=An evidence assigned by a GO annotator.
@@ -223,6 +226,7 @@ GOEvidenceCode=A three-letter code that indicates how annotation to a particular
 GOTerm=A term from the Gene Ontology.
 Group=Chromosome groups of Apis mellifera were assembled by joining scaffolds.
 Homologue=Gene with common ancestry. A homologue can be an orthologue (genes separated by the event of speciation) or paralogue (genes separated by the event of genetic duplication).
+Image=Photographic image of the in-situ staining of embryos from mRNA expression studies.
 InfoSource=The source of published information, either a publication or an external database.
 InterMineObject=The parent class of all other classes in the database.
 InterproEvidence=Extra evidence for InterPro objects.
@@ -234,6 +238,8 @@ MicroarrayOligo=A gene-specific oligonucleotide designed for use in a microarray
 MicroArrayResult=Numerical result for one sequence/sample pair in a particular microarray assay or derived from multiple assays.
 ModelledProteinStructure=The three-dimensional conformation of a protein, as predicted by computational analysis.
 Motif=A sequence motif is a short region of biological interest.
+mRNAExpressionResult=The result of an mRNA expression experiment.
+mRNAExpressionTerm=An anatomy term describing where mRNA expression was observed.  Includes the ImaGO controlled vocabulary and terms used by the fly-FISH database.
 NuclearDNA=DNA that can be found in the nucleus of a cell.
 Ontology=A controlled vocabulary.
 OntologyRelation=The relationship between two terms in an ontology.
@@ -274,6 +280,7 @@ SampleCharacteristic=Description of some characteristic (type and value) of a sa
 Scaffold=Larger sequence contigs that result from the assembly of shorter (often whole genome shotgun, WGS) sequencing reads which could not yet be assembled into chromosomes. Generally, more genome sequencing, narrowing of gaps and establishment of a tiling path is necessary before a chromosome assembly can be established.
 Sequence=The order of building blocks in biological macromolecules like DNA, RNA, protein and polysaccharides.
 SimpleRelation=A simple relationship between two BioEntities.
+Stage=Developmental stage.
 SymmetricalRelation=A relationship between two BioEntities that doesn't have direction - all objects are related to each other in the same way.
 Synonym=Another name by which a BioEntity is known.
 TilingPathSpan=A tiling path is a set of regions which overlap with minimal polymorphism to form a linear sequence. A TilingPathSpan starts at the initiation codon of one gene and ends at the initiation codon of a neighbouring gene or at a transposable element.
