--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -238,8 +238,8 @@ MicroarrayOligo=A gene-specific oligonucleotide designed for use in a microarray
 MicroArrayResult=Numerical result for one sequence/sample pair in a particular microarray assay or derived from multiple assays.
 ModelledProteinStructure=The three-dimensional conformation of a protein, as predicted by computational analysis.
 Motif=A sequence motif is a short region of biological interest.
-mRNAExpressionResult=The result of an mRNA expression experiment.
-mRNAExpressionTerm=An anatomy term describing where mRNA expression was observed.  Includes the ImaGO controlled vocabulary and terms used by the fly-FISH database.
+MRNAExpressionResult=The result of an mRNA expression experiment.
+MRNAExpressionTerm=An anatomy term describing where mRNA expression was observed.  Includes the ImaGO controlled vocabulary and terms used by the fly-FISH database.
 NuclearDNA=DNA that can be found in the nucleus of a cell.
 Ontology=A controlled vocabulary.
 OntologyRelation=The relationship between two terms in an ontology.
