--- a/bio/tutorial/malariamine/dbmodel/resources/genomic_keyDefs.properties
+++ b/bio/tutorial/malariamine/dbmodel/resources/genomic_keyDefs.properties
@@ -8,7 +8,7 @@ Protein.key_primaryidentifier=primaryIdentifier
 Protein.key_primaryacc=primaryAccession
 Translation.key_primaryidentifier=primaryIdentifier
 Translation.key_symbol_org=symbol, organism
-Translation.key_primaryidentifier=primaryIdentifier
+Translation.key_secondaryidentifier=secondaryIdentifier, organism
 CDS.key_primaryidentifier=primaryIdentifier
 Chromosome.key_primaryidentifier = primaryIdentifier, organism
 ChromosomeBand.key_identifier_chromosome_org=primaryIdentifier, chromosome, organism
