--- a/bio/core/test/resources/modmine_acceptance_test.conf
+++ b/bio/core/test/resources/modmine_acceptance_test.conf
@@ -1,7 +1,7 @@
 # acceptance tests for modMine
 
 assert {
-  sql: select count(*) = 15 from organism
+  sql: select count(*) = 2 from organism
 }
 
 no-results {
@@ -40,27 +40,27 @@ no-results {
   note: no two location objects should have the same objectid, subjectid, start and end positions
 }
 no-results {
-  sql: select rr1.identifier, rr1.id, rr2.identifier, rr2.id from regulatoryregion as rr1, regulatoryregion as rr2 where rr1.identifier = rr2.identifier and rr1.id <> rr2.id
-  note: no two regulatoryregions should have the same identifier (see #564)
+  sql: select rr1.primaryidentifier, rr1.id, rr2.primaryidentifier, rr2.id from regulatoryregion as rr1, regulatoryregion as rr2 where rr1.primaryidentifier = rr2.primaryidentifier and rr1.id <> rr2.id
+  note: no two regulatoryregions should have the same primaryidentifier (see #564)
 }
 no-results {
-  sql: select gene1.identifier, gene1.id, gene2.identifier, gene2.id from gene as gene1, gene as gene2 where gene1.identifier = gene2.identifier and gene1.id <> gene2.id
-  note: no two genes should have the same identifier
+  sql: select gene1.primaryidentifier, gene1.id, gene2.primaryidentifier, gene2.id from gene as gene1, gene as gene2 where gene1.primaryidentifier = gene2.primaryidentifier and gene1.id <> gene2.id
+  note: no two genes should have the same primaryidentifier
 }
 no-results {
-  sql: select translation1.identifier, translation1.id, translation2.identifier, translation2.id from intermine_translation as translation1, intermine_translation as translation2 where translation1.identifier = translation2.identifier and translation1.id <> translation2.id
-  note: no two Translation objects should have the same identifier
+  sql: select translation1.primaryidentifier, translation1.id, translation2.primaryidentifier, translation2.id from intermine_translation as translation1, intermine_translation as translation2 where translation1.primaryidentifier = translation2.primaryidentifier and translation1.id <> translation2.id
+  note: no two Translation objects should have the same primaryidentifier
 }
 no-results {
-  sql: select transcript1.identifier, transcript1.id, transcript2.identifier, transcript2.id from transcript as transcript1, transcript as transcript2 where transcript1.identifier = transcript2.identifier and transcript1.id <> transcript2.id
-  note: no two Transcript objects should have the same identifier
+  sql: select transcript1.primaryidentifier, transcript1.id, transcript2.primaryidentifier, transcript2.id from transcript as transcript1, transcript as transcript2 where transcript1.primaryidentifier = transcript2.primaryidentifier and transcript1.id <> transcript2.id
+  note: no two Transcript objects should have the same primaryidentifier
 }
 no-results {
   sql: select loc1.id, loc2.id, sv.id from location as loc1, location as loc2, sequencevariant as sv where loc1.subjectid = loc2.subjectid and loc1.subjectid = sv.id and loc1.id <> loc2.id
   note: no sequencevariants should have more than one location (ticket #540)
 }
 no-results {
-  sql: select * from chromosomeband where identifier = '-'
+  sql: select * from chromosomeband where primaryidentifier = '-'
   note: see #567
 }
 no-results {
@@ -69,14 +69,14 @@ no-results {
 }
 no-results {
   sql: select * from bioentity where uniquename is null
-  note: we should not have null uniquenames (main identifier)
+  note: we should not have null uniquenames (main primaryidentifier)
 }
 no-results {
-  sql: select lsf.id, lsf.identifier, intermine_sequence.id from locatedsequencefeature as lsf, intermine_sequence where intermine_sequence.id = sequenceid and length(intermine_sequence.residues) <> lsf.length
+  sql: select lsf.id, lsf.primaryidentifier, intermine_sequence.id from locatedsequencefeature as lsf, intermine_sequence where intermine_sequence.id = sequenceid and length(intermine_sequence.residues) <> lsf.length
   note: LocatedSequenceFeature.length should equal the length of the Sequence.residues (see #669)
 }
 no-results {
-  sql: select lsf.id, lsf.identifier, lsf.length, seq.id, seq.length from locatedsequencefeature as lsf, intermine_sequence as seq where lsf.sequenceid = seq.id and lsf.length != seq.length
+  sql: select lsf.id, lsf.primaryidentifier, lsf.length, seq.id, seq.length from locatedsequencefeature as lsf, intermine_sequence as seq where lsf.sequenceid = seq.id and lsf.length != seq.length
   note: LocatedSequenceFeature.length should equal the length of the Sequence.length (see #669)
 }
 no-results {
@@ -92,8 +92,8 @@ no-results {
   note: There should be no duplicate uniqueName..
 }
 no-results {
-  sql: select * from intermineobject where id in (select b.id from bioentity b where b.identifier is not null and not exists (select * from synonym s where s.intermine_value = b.identifier and s.subjectid = b.id)) limit 100
-  note: all BioEntities should have their identifier as a synonm
+  sql: select * from intermineobject where id in (select b.id from bioentity b where b.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = b.primaryidentifier and s.subjectid = b.id)) limit 100
+  note: all BioEntities should have their primaryidentifier as a synonm
 }
 no-results {
   sql: select * from intermineobject where id in (select g.id from gene g where g.uniqueName is not null and not exists (select * from synonym s where s.intermine_value = g.uniqueName and s.subjectid = g.id)) limit 100
@@ -108,8 +108,8 @@ no-results {
   note: all Proteins should have their primaryAccession as a synonm
 }
 no-results {
-  sql: select t1.id, t1.identifier, t2.id, t2.identifier from intermine_translation as t1, intermine_translation as t2 where t1.id != t2.id and t1.identifier = t2.identifier
-  note: no two Translations should have the same identifier
+  sql: select t1.id, t1.primaryidentifier, t2.id, t2.primaryidentifier from intermine_translation as t1, intermine_translation as t2 where t1.id != t2.id and t1.primaryidentifier = t2.primaryidentifier
+  note: no two Translations should have the same primaryidentifier
 }
 no-results {
   sql: select * from intermine_translation where mrnaid is null;
@@ -120,7 +120,7 @@ no-results {
   note: all MRNAs should have a non-null translationid
 }
 no-results {
-  sql: select distinct a1_.id, a1_.identifier, a1_.name, a2_.id, a2_.identifier from gene as a1_, intergenicregion as a2_, locatedsequencefeatureoverlappingfeatures as indirect0 where a1_.id = indirect0.overlappingfeatures and indirect0.locatedsequencefeature = a2_.id
+  sql: select distinct a1_.id, a1_.primaryidentifier, a1_.name, a2_.id, a2_.primaryidentifier from gene as a1_, intergenicregion as a2_, locatedsequencefeatureoverlappingfeatures as indirect0 where a1_.id = indirect0.overlappingfeatures and indirect0.locatedsequencefeature = a2_.id
   note: No genes should overlap IntergenicRegions
 }
 no-results {
