more changes to acceptance test conf
Former-commit-id: e40e1856062a48c725cc0678dfe0f39172c96b7a

--- a/bio/core/test/resources/modmine_acceptance_test.conf
+++ b/bio/core/test/resources/modmine_acceptance_test.conf
@@ -19,12 +19,8 @@ some-results {
   note: at least some SequenceVariant objects should have gene references
 }
 some-results {
-  sql: select cds.id, identifier, length(intermine_sequence.residues), intermine_end - intermine_start + 1 as calc_length from cds, location, intermine_sequence where chromosomelocationid = location.id and length(intermine_sequence.residues) <> intermine_end - intermine_start + 1 limit 10
+  sql: select cds.id, primaryidentifier, length(intermine_sequence.residues), intermine_end - intermine_start + 1 as calc_length from cds, location, intermine_sequence where chromosomelocationid = location.id and length(intermine_sequence.residues) <> intermine_end - intermine_start + 1 limit 10
   note: make sure that there are at least some CDSs with lengths shorter than the end-start+1, which is evidence that the CDS lengths are the (sum of the exon lengths - UTR length) see #621
-}
-some-results {
-  sql: select * from organism where name = 'Anopheles gambiae str. PEST'
-  note: We should have an Anopheles gambiae PEST object but not an Anopheles gambiae one
 }
 
 no-results {
@@ -68,8 +64,8 @@ no-results {
   note: see #569
 }
 no-results {
-  sql: select * from bioentity where uniquename is null
-  note: we should not have null uniquenames (main primaryidentifier)
+  sql: select * from bioentity where primaryidentifier is null
+  note: we should not have null primaryidentifier
 }
 no-results {
   sql: select lsf.id, lsf.primaryidentifier, intermine_sequence.id from locatedsequencefeature as lsf, intermine_sequence where intermine_sequence.id = sequenceid and length(intermine_sequence.residues) <> lsf.length
@@ -88,16 +84,16 @@ no-results {
   note: If synonym key used correctly for all sources there should be no duplicate synonyms
 }
 no-results {
-  sql: select uniquename, count(*) from bioentity group by uniquename having count(*) > 1
-  note: There should be no duplicate uniqueName..
+  sql: select primaryidentifier, count(*) from bioentity group by primaryidentifier having count(*) > 1
+  note: There should be no duplicate primaryidentifier..
 }
 no-results {
   sql: select * from intermineobject where id in (select b.id from bioentity b where b.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = b.primaryidentifier and s.subjectid = b.id)) limit 100
   note: all BioEntities should have their primaryidentifier as a synonm
 }
 no-results {
-  sql: select * from intermineobject where id in (select g.id from gene g where g.uniqueName is not null and not exists (select * from synonym s where s.intermine_value = g.uniqueName and s.subjectid = g.id)) limit 100
-  note: all Genes should have their uniqueName as a synonm
+  sql: select * from intermineobject where id in (select g.id from gene g where g.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = g.primaryidentifier and s.subjectid = g.id)) limit 100
+  note: all Genes should have their primaryidentifier as a synonm
 }
 no-results {
   sql: select * from intermineobject where id in (select g.id from gene g where g.symbol is not null and not exists (select * from synonym s where s.intermine_value = g.symbol and s.subjectid = g.id)) limit 100
