--- a/bio/core/test/resources/modmine_acceptance_test.conf
+++ b/bio/core/test/resources/modmine_acceptance_test.conf
@@ -3,17 +3,14 @@
 assert {
   sql: select count(*) = 2 from organism
 }
-
 no-results {
   sql: select * from organism where genus is null or species is null or abbreviation is null or shortname is null or name is null or taxonid is null
   note: all fields of all organisms should be filled in
 }
-
 no-results {
   sql: select * from datasource where url is null or name is null or description is null;
   note: all fields of data source should be filled in
 }
-
 some-results {
   sql: select * from sequencevariant where id in (select genes from genessequencevariant);
   note: at least some SequenceVariant objects should have gene references
@@ -21,11 +18,6 @@ some-results {
 some-results {
   sql: select cds.id, primaryidentifier, length(intermine_sequence.residues), intermine_end - intermine_start + 1 as calc_length from cds, location, intermine_sequence where chromosomelocationid = location.id and length(intermine_sequence.residues) <> intermine_end - intermine_start + 1 limit 10
   note: make sure that there are at least some CDSs with lengths shorter than the end-start+1, which is evidence that the CDS lengths are the (sum of the exon lengths - UTR length) see #621
-}
-
-no-results {
-  sql: select * from intermineobject where id in (select b.id from bioentity b where organismid is null and not exists (select p.id from proteinfeature p where b.id = p.id))
-  note: all BioEntity objects should have an organism (exception if ProteinFeature or ProteinRegion)
 }
 no-results {
   sql: select gene.id from gene where length > 1000000
@@ -88,20 +80,21 @@ no-results {
   note: There should be no duplicate primaryidentifier..
 }
 no-results {
+  sql: select * from intermineobject where id in (select b.id from bioentity b where b.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = b.primaryidentifier and s.subjectid = b.id))
   sql: select * from intermineobject where id in (select b.id from bioentity b where b.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = b.primaryidentifier and s.subjectid = b.id)) limit 100
-  note: all BioEntities should have their primaryidentifier as a synonm
+  note: all BioEntities should have their primaryidentifier as a synonim
 }
 no-results {
   sql: select * from intermineobject where id in (select g.id from gene g where g.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = g.primaryidentifier and s.subjectid = g.id)) limit 100
-  note: all Genes should have their primaryidentifier as a synonm
+  note: all Genes should have their primaryidentifier as a synonim
 }
 no-results {
   sql: select * from intermineobject where id in (select g.id from gene g where g.symbol is not null and not exists (select * from synonym s where s.intermine_value = g.symbol and s.subjectid = g.id)) limit 100
-  note: all Genes should have their symbol as a synonm
+  note: all Genes should have their symbol as a synonim
 }
 no-results {
   sql: select * from intermineobject where id in (select p.id from protein p where p.primaryAccession is not null and not exists (select * from synonym s where s.intermine_value = p.primaryAccession and s.subjectid = p.id)) limit 100
-  note: all Proteins should have their primaryAccession as a synonm
+  note: all Proteins should have their primaryAccession as a synonim
 }
 no-results {
   sql: select t1.id, t1.primaryidentifier, t2.id, t2.primaryidentifier from intermine_translation as t1, intermine_translation as t2 where t1.id != t2.id and t1.primaryidentifier = t2.primaryidentifier
@@ -118,10 +111,6 @@ no-results {
 no-results {
   sql: select distinct a1_.id, a1_.primaryidentifier, a1_.name, a2_.id, a2_.primaryidentifier from gene as a1_, intergenicregion as a2_, locatedsequencefeatureoverlappingfeatures as indirect0 where a1_.id = indirect0.overlappingfeatures and indirect0.locatedsequencefeature = a2_.id
   note: No genes should overlap IntergenicRegions
-}
-no-results {
-  sql: select * from organism where name = 'Anopheles gambiae'
-  note: We should have an Anopheles gambiae PEST object but not an Anopheles gambiae one
 }
 
 results-report {
