--- a/bio/core/test/resources/modmine_acceptance_test.conf
+++ b/bio/core/test/resources/modmine_acceptance_test.conf
@@ -84,6 +84,10 @@ no-results {
   sql: select * from intermineobject where id in (select b.id from bioentity b where b.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = b.primaryidentifier and s.subjectid = b.id)) limit 100
   note: all BioEntities should have their primaryidentifier as a synonim
 }
+some-results {
+  sql: select count(*) from intermineobject where id in (select b.id from bioentity b where b.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = b.primaryidentifier and s.subjectid = b.id))
+  note: all BioEntities should have their primaryidentifier as a synonim: counting the offending records
+}
 no-results {
   sql: select * from intermineobject where id in (select g.id from gene g where g.primaryidentifier is not null and not exists (select * from synonym s where s.intermine_value = g.primaryidentifier and s.subjectid = g.id)) limit 100
   note: all Genes should have their primaryidentifier as a synonim
