added some priorities and removed dpse
Former-commit-id: cf99c557c8783c101bea0659b369d0d9eb0353d3

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -7,7 +7,6 @@
 
 BioEntity.identifier = \
   chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
   chado-db-wormbase-c_elegans, \
   uniprot, \
   *
@@ -18,43 +17,39 @@ BioEntity.organism = \
 
 BioEntity.name = \
   chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
   chado-db-wormbase-c_elegans, \
   uniprot, \
   *
 
 Chromosome.sequence = \
-  flybase-dpse-chromosome-fasta, \
   chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
   *
 
 Gene.sequence = \
   flybase-dmel-gene-fasta, \
-  flybase-dpse-gene-fasta, \
   chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
   chado-db-wormbase-c_elegans,\
   *
 
 Gene.symbol = \
   chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
   chado-db-wormbase-c_elegans,\
   uniprot, \
   *
  
 LocatedSequenceFeature.length = \
   chado-db-flybase-dmel, \
-  chado-db-flybase-dpse, \
   flybase-dmel-chromosome-fasta, \
-  flybase-dpse-chromosome-fasta, \
   flybase-dmel-5prime-utr-fasta, \
   flybase-dmel-3prime-utr-fasta, \
   flybase-dmel-gene-fasta, \
-  flybase-dpse-gene-fasta, \
   chado-db-wormbase-c_elegans, \
-  wormbase-c_elegans-chromosome-fasta
+  wormbase-c_elegans-chromosome-fasta, \
+  modencode-metadata
+
+LocatedSequenceFeature.sequence = \
+  chado-db-flybase-dmel, \
+  modencode-metadata
 
 DataSet = \
   modmine-static, *
