modmine metadata: some cleaning and renaming. added MNRA priority
Former-commit-id: 1dbc2d826eda9fb55a0abe1e976ddffb3662c45a

--- a/modmine/dbmodel/resources/genomic_priorities.properties
+++ b/modmine/dbmodel/resources/genomic_priorities.properties
@@ -51,6 +51,12 @@ LocatedSequenceFeature.sequence = \
   chado-db-flybase-dmel, \
   modencode-metadata
 
+
+MRNA.symbol = \
+  chado-db-flybase-dmel, \
+  modencode-metadata
+
+
 DataSet = \
   modmine-static, *
 
