--- a/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
+++ b/bio/webapp/resources/webapp/WEB-INF/classDescriptions.properties
@@ -252,6 +252,7 @@ Paralogue=Paralogues are genes from the same homologous super-family found in an
 PartialLocation=The location of part of a BioEntity on another.
 Pathway=Molecular interaction network.
 Phenotype=The observable characteristics of an organism. The expression of gene alleles (genotype) as an observable physical or biochemical trait.
+PhenotypeAnnotation=Describes the way a phenotype relates to an allele.
 Protein=One or more polypeptides which may, or may not, be covalently bonded, and which assume a native secondary and tertiary structure.
 ProteinBindingSite=A region of a molecule that binds to a protein.
 ProteinDomain=A region of a protein that folds into an independent unit and exhibits biological activity. A polypeptide chain may have multiple domains.
