--- a/bio/core/props/resources/class_keys.properties
+++ b/bio/core/props/resources/class_keys.properties
@@ -25,4 +25,4 @@ TiffinExpressionTerm = name
 DataSet = title
 Deletion = primaryIdentifier, secondaryIdentifier
 MicroArrayAssay = name
-
+PhenotypeAnnotation = description
