--- a/bio/test-all/dbmodel/build.xml
+++ b/bio/test-all/dbmodel/build.xml
@@ -21,6 +21,7 @@
     <merge-additions file="bio/sources/tiling_path/tiling_path_additions.xml"/>
     <merge-additions file="bio/sources/long_oligo/long_oligo_additions.xml"/>
     <merge-additions file="bio/sources/chado-db/chado-db_additions.xml"/>
+    <merge-additions file="bio/sources/chado-db/flybase-chado-db_additions.xml"/>
     <merge-additions file="bio/sources/anoest/anoest_additions.xml"/>
     <merge-additions file="bio/sources/homophila/homophila_additions.xml"/>
     <merge-additions file="bio/sources/interpro/interpro_additions.xml"/>
