--- a/bio/sources/gatkvcf/project.properties
+++ b/bio/sources/gatkvcf/project.properties
@@ -3,6 +3,8 @@ compile.dependencies = intermine/objectstore/main, \
            intermine/integrate/main, \
            bio/sources/gatkvcf/main
 
-have.file.custom.tgt = true
-converter.class = org.intermine.bio.dataconversion.GatkvcfConverter
-postprocessor.class = org.intermine.bio.postprocess.GatkvcfPostProcess
+have.file.custom.direct = true
+#have.file.custom.tgt = true
+#converter.class = org.intermine.bio.dataconversion.GatkvcfConverter
+#converter.class = org.intermine.bio.dataconversion.GatkvcfDirectConverter
+#postprocessor.class = org.intermine.bio.postprocess.GatkvcfPostProcess
